get nomad client working

--- a/compose.yaml
+++ b/compose.yaml
@@ -4,5 +4,17 @@ services:
   server:
     build:
       context: .
+      dockerfile: server.Dockerfile
     ports:
       - "127.0.0.1:${NOMAD_PORT}:4646"
+
+  client:
+    depends_on:
+      - server
+    build:
+      context: .
+      dockerfile: client.Dockerfile
+    # nomad clients run as root, but they create cgroups to do their dirty work
+    # so we need to give the container permission to do that stuff
+    cgroup: host
+    privileged: true
